--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-<router-outlet />
 <app-header  ></app-header>
-<app-contenedor-central></app-contenedor-central>
-<app-formulario> </app-formulario>
+<router-outlet />
+<app-footer></app-footer>
