--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="caja-barra-navegacion">
-    <div class="caja-barra-navegacion">
+    <div class="barra-de-navegacion">
         <nav  class="navbar navbar-expand-md navbar-dark caja-barra-navegacion" id="colorbarra">
             <a class="navbar-brand"> <img src="assets/imagenes/logo-green2.png" alt="logo-empresa" width="199px" height="142px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
@@ -7,18 +7,18 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <div class="pruebaizquierda">
-                    <ul class="navbar-nav" id="lista-barranav">
-                        <li class="nav-item mr-5 active">
+                    <ul class="navbar-nav mx-auto" id="lista-barranav">
+                        <li class="nav-item mr-4 active">
                             <a href="/index.html" class="nav-link">
                             NOSOTROS
                             </a>
                         </li>
-                        <li class="nav-item mr-5 active">
+                        <li class="nav-item mr-4 active">
                             <a href="/index.html" class="nav-link" >
                             PROGRAMAS
                             </a>
                         </li>
-                        <li class="nav-item active mr-5">
+                        <li class="nav-item active mr-4">
                             <a href="/index.html" class="nav-link">
                             CONTACTO
                             </a>
