--- a/src/app/contenedor-central/contenedor-central.component.css
+++ b/src/app/contenedor-central/contenedor-central.component.css
@@ -21,5 +21,6 @@ h1{
     height: 184;
 }
 .fondocolor{
-    background-color:  #083653; 
+    /*background-color:  #083653;*/
+    background-color: #011826;  
 }
