--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,7 +1,12 @@
 .caja-barra-navegacion{
     /*background-color: rgba(35, 181, 211, 0.20);*/
-    background-color:  #032438; 
+    background-color:  #032438;
 }
-.colorbarra{
+/*.colorbarra{
     padding-left: 130px;
+}*/
+li{
+    font-size: 20px;
+    font-weight: 700;
+    padding-left: 150px;
 }
