--- a/src/app/formulario/formulario.component.html
+++ b/src/app/formulario/formulario.component.html
@@ -1,15 +1,15 @@
-<form class="formulario" id="formulario">
+<form [formGroup]="contactoFormulario" class="formulario" id="formulario">
     <h1 class="titulo-registro-informacion">Registrate para más información</h1>
                 <div class="datos formulario__grupo" id="grupo__nombre" >
                     <div class="formulario__grupo-input mb-2">
-                        <input type="text" placeholder="Nombre" class="input-text formulario__input" id="nombre" name="nombre">    
+                        <input formControlName="nombre" type="text" placeholder="Nombre" class="input-text formulario__input " id="nombre" name="nombre">    
                         <i class="formulario__validacion-estado fa-solid fa-circle"></i>
                     </div>
                     <p class="formulario__input-error">El nombre debe ser de 2 a 60 letras sin numeros</p>   
                 </div>
                 <div class="datos formulario__grupo" id="grupo__apellido" >
                     <div class="formulario__grupo-input mb-2">
-                            <input type="text" placeholder="Apellido" class="input-text formulario__input" id="apellido" name="apellido">    
+                            <input formControlName="apellido" type="text" placeholder="Apellido" class="input-text formulario__input" id="apellido" name="apellido">    
                             <i class="formulario__validacion-estado fa-solid fa-circle"></i>
                         </div>
                         <p class="formulario__input-error">El apellido debe ser de 2 a 60 letras sin numeros</p>   
@@ -17,7 +17,7 @@
                 </div>                             
         <div class="datos formulario__grupo" id="grupo__correo" >
                 <div class="formulario__grupo-input">
-                    <input type="email" placeholder="correo" class="input-text formulario__input" id="correo" name="correo">    
+                    <input formControlName="correo" type="email" placeholder="correo" class="input-text formulario__input" id="correo" name="correo">    
                     <i class="formulario__validacion-estado fa-solid fa-circle"></i>
                 </div>
                 <p class="formulario__input-error">no es un correo valido</p>                                                 
@@ -26,7 +26,7 @@
     <!--terminos y condiciones-->
     <div class="formulario__grupo"  id="grupo__terminos">
         <label class=" labelterminos formulario__label"> 
-            <input type="checkbox" class="formulario__checkbox terminos" name="terminos" id="terminos">
+            <input  formControlName="terminos" type="checkbox" class="formulario__checkbox terminos" name="terminos" id="terminos">
             acepto terminos y condiciones               
         </label>
     </div>
@@ -36,9 +36,9 @@
     </div>
 
     <div class="formulario__gurpo formulario__grupo-btn-enviar">
-        <button type="submit" class=" boton formulario__btn">Enviar</button>
+        <button (click)="mostrarDatosFormulario()"  type="submit" class=" boton formulario__btn">Enviar</button>
         <p class="formulario__mensaje-exito" id="formulario__mensaje-exito">Formulario enviado exitosamente!</p>
     </div>
-
+    <p class="mensaje_error" *ngIf="mostrarMensajeError">este es un mensaje de error</p>
     
 </form>
