--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,12 +9,12 @@
                 <div class="pruebaizquierda">
                     <ul class="navbar-nav mx-auto" id="lista-barranav">
                         <li class="nav-item mr-4 active">
-                            <a href="/index.html" class="nav-link">
+                            <a routerLink="/nosotros" class="nav-link">
                             NOSOTROS
                             </a>
                         </li>
                         <li class="nav-item mr-4 active">
-                            <a href="/index.html" class="nav-link" >
+                            <a routerLink="/programas" routerLinkActive="active" class="nav-link" >
                             PROGRAMAS
                             </a>
                         </li>
