actualización entrega final

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -4,8 +4,8 @@
     </div>
     <div class="listapie">
         <ul>
-            <li>CONTACO</li>
-            <li>NOTICIAS</li>
+            <li ><a routerLink="/contacto" class="pruebacolor"><strong>CONTACTO</strong></a></li>
+            <li><a routerLink="/NOTICIAS" class="pruebacolor"><strong>NOTICIAS</strong> </a></li>
             <li>TrainabilitMx,2023</li>
         </ul>
     </div>
