--- a/src/app/cards/cards.component.html
+++ b/src/app/cards/cards.component.html
@@ -4,9 +4,9 @@
             en el baloncesto, atendemos la formación y el acondicionamiento fisico, por tanto si tu deseo es aprender y fundamentarte en este 
           deporte estas en el lugar indicado o si deseas mejorar tu salud y tu apariencia fisica este también es el lugar</p>    
     <div class="contenedor_tarjetas">
-    <div class="card">
+    <div class="card" routerLink="/contacto">
         <div class="card-body">
-            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES <a routerLink="/contacto">click</a></h1>
+            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES <a routerLink="/contacto">Ver más</a></h1>
             <h2 class="h6 card-subtitle">FUNDAMENTACION</h2>
             <img src="assets/imagenes/baloncesto1.jpg" class="img-fluid">
             <p class="card-text">Fundamenta de la manera correcta, y conviertete en el deportista que sueñas</p>
@@ -15,7 +15,7 @@
     </div>
     <div class="card">
         <div class="card-body">
-            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES</h1>
+            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES <a routerLink="/contacto">Ver más</a></h1>
             <h2 class="h6 card-subtitle">FORMACION</h2>
             <img src="assets/imagenes/baloncesto1.jpg" class="img-fluid">
             <p class="card-text">A traves de rutinas, se crearán habitos que mejoraran tu técnica</p>
@@ -24,7 +24,7 @@
     </div>
     <div class="card">
         <div class="card-body">
-            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES</h1>
+            <h1 class="h5 card-title">ENTRENADORES PROFESIONALES <a routerLink="/contacto">Ver más</a></h1>
             <h2 class="h6 card-subtitle">FORMACION</h2>
             <img src="assets/imagenes/baloncesto1.jpg" class="img-fluid">
             <p class="card-text">A traves de rutinas, se crearán habitos que mejoraran tu técnica</p>
@@ -33,7 +33,7 @@
     </div>
     <div class="card">
         <div class="card-body">
-            <h1 class="h5 card-title">ENTRENAMIENTOS PERSONALIZADOS</h1>
+            <h1 class="h5 card-title">ENTRENAMIENTOS PERSONALIZADOS <a routerLink="/contacto">Ver más</a></h1>
             <h2 class="h6 card-subtitle">FORMACION</h2>
             <img src="assets/imagenes/baloncesto1.jpg" class="img-fluid">
             <p class="card-text">A traves de rutinas, se crearán habitos que mejoraran tu técnica</p>
